# python-template

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .yamllint.yaml  Makefile  README.md  initialize.sh  pull_request_template.md  pyproject.toml  ruff.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql-analysis.yml  lint-and-test.yaml  pre-commit.yaml  pytest.yaml  release.yaml  stale.yaml
requirements/: local.txt  test.txt
tests/: ruff.toml  test_example.py
