[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Python Template"
authors = ["Jim Fawkes <JimFawkes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
